# meta

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.nvim/: clangd.lua
examples/: CMakeLists.txt  example_cli.cpp  example_main.cpp
meta/: CMakeLists.txt
meta/app/: Logger.hpp  SettingsManager.hpp
meta/base/: CMakeLists.txt
meta/base/app/: CMakeLists.txt  Logger.hpp  SettingsManager.hpp
meta/base/core/: Console.hpp  FeatureCheck.hpp  Format.hpp  Platform.hpp  ScopeTimer.hpp  Signal.hpp  String.hpp  Timer.hpp
meta/base/filesystem/: CMakeLists.txt  File.hpp  Path.hpp
meta/base/math/: CMakeLists.txt  Constants.hpp  Vector.hpp
meta/base/serialization/: INI.hpp
meta/core/: CMakeLists.txt  Console.hpp  Format.hpp  Platform.hpp  ScopeTimer.hpp  String.hpp  Timer.hpp
meta/filesystem/: File.hpp  Path.hpp
meta/graphics/: CMakeLists.txt  Texture.hpp
meta/graphics/backend/: SDL2Texture.cpp  SDL2Texture.hpp
meta/gui/: Button.hpp  CMakeLists.txt  CheckBox.hpp  Font.hpp  FontManager.hpp  HorizontalLayout.hpp  Label.hpp  Layout.hpp  Slider.hpp  Tab.hpp  TabContainer.hpp  TextBox.hpp  TextUtils.hpp  Theme.hpp  Toggle.hpp  Transition.hpp  VerticalLayout.hpp  Widget.hpp  Window.hpp
meta/gui/layouts/: HorizontalLayout.hpp  Layout.hpp  VerticalLayout.hpp
meta/gui/widgets/: Button.hpp  CheckBox.hpp  RadioButton.hpp  Slider.hpp  Tab.hpp  TextBox.hpp  Toggle.hpp  Widget.hpp
meta/math/: CMakeLists.txt  Constants.hpp  Vector.hpp
meta/serialization/: CMakeLists.txt  INI.hpp
tests/: CMakeLists.txt
